# obsidian-list-anki-parser

./: README.md  anki.py  const.py  extract.py  main.py  pyproject.toml
