[project]
name = "extract-anki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "genanki>=0.13.1",
    "markdown>=3.8.2",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.2",
    "pydantic>=2.11.7",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.2",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
